--- a/HTML+CSS/index.html
+++ b/HTML+CSS/index.html
@@ -21,15 +21,15 @@
                 <div class = "header-nav-item">투자정보</div>
             </div>
             <div class = "header-buttons">
-                <div class = "icon-button serach"></div>
+                <div class = "icon-button search"></div>
                 <div class = "icon-button earth"></div>
                 <div class = "icon-button moon"></div>
             </div>
         </div>
         <div id = "main">
             <div class = "video">
-                <video class="video-content">
-                    <source />
+                <video class="video-content" muted autoplay loop>
+                    <source src="https://t1.kakaocdn.net/kakaocorp/kakaocorp/admin/heroVisual/4df145ef019000001.mp4" type = "video/mp4"/>
                 </video>
                 <div class = "video-text"></div>
                 <div class = "video-lens"></div>
