--- a/JS/14.Fetch/fetch.html
+++ b/JS/14.Fetch/fetch.html
@@ -12,10 +12,10 @@
     <script>
 
         /*
-            JSON: 
-            - 
-            - 
-            - 
+            JSON: Javascript Object Notation 
+            - 클라이언트와 서버 간 데이터 교환을 위한 문자열 포맷
+            - XML 포맷보다 가볍고 사용성이 편리함
+            - 자바스크립트 객체 리터럴과 동일하게 생겼지만, JSON은 100% 텍스트
         */
 
         /*
